- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 4.12.1
 - 
    None
 - 
    macOS 10.14.6
 
- 
        
 - 
        4a6aa35a9151e083a45e76d04a847832bc7d588c (qt-creator/qt-creator/master)
 
not tested on winOS
worked in 4.11 series, broke in 4.12.0, still broken in 4.12.1
variables tested as not working in "Executable", but DO work in "Working Directory":
sourceDir, buildDir, all "currentProject:" vars.
what DOES work in "Exectuable" is "%{CurrentRun:WorkingDir}"
| For Gerrit Dashboard: QTCREATORBUG-24095 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 302215,2 | Utils: Do not use QDir::cleanPath() in FilePath::fromUserInput() | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |